--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                                             <li><a href="">Business</a></li>
                                             <li><a href="">Service</a></li>
                                             <li><a href="">Contact Us</a></li>
+                                            <li><a href="/login.html">Login</a></li>
+                                            <li><a href="/register.html">Register</a></li>
                                         </ul>
                                     </nav>
                                 </div>
