--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         <ul id="navigation">
                                             <li><a href="#">Home</a></li>
                                             <li><a href="">Business</a></li>
-                                            <li><a href="">Service</a></li>
+                                            <!-- <li><a href="">Service</a></li> -->
                                             <li><a href="">Contact Us</a></li>
                                             <li><a href="/login.html">Login</a></li>
                                             <li><a href="/register.html">Register</a></li>
